--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,15 @@ footer {
   box-shadow: inset 0px -75px 18px -82px rgba(0,0,0,1);
 }
 
-#profile-container {
+.blue-bar-wider {
+  height: 150px;
+  background-color: #BBEFF1;
+  -webkit-box-shadow: inset 0px -75px 18px -82px rgba(0,0,0,1);
+  -moz-box-shadow: inset 0px -75px 18px -82px rgba(0,0,0,1);
+  box-shadow: inset 0px -75px 18px -82px rgba(0,0,0,1);
+}
+
+#project-container {
   margin-top: -50px;
 }
 
@@ -90,6 +98,16 @@ hr {
   text-align: center;
 }
 
+.skill-remove {
+  background-color: red;
+  color: white;
+}
+
+.skill-endorse {
+  background-color: rgb(27, 182, 31);
+  color: white;
+}
+
 #bid-row {
   padding: 30px 30px;
 
@@ -127,4 +145,17 @@ hr {
 
 .winner {
   color: green;
+}
+
+.profile-picture {
+  margin-top: -95px;
+  width: 190px;
+  height: 190px;
+  border-radius: 22px;
+  border: 10px solid rgba(255, 255, 255, 0.8);
+}
+
+#addSkillMenu {
+  min-width: 200px;
+  background-color: rgb(246, 246, 246);
 }
