--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,7 @@ body {
   background-color: rgb(246, 246, 246);
 }
 
-main {
-  margin-top: 60px;
-}
-
-header .nav {
+header {
   height: 60px;
 }
 
@@ -27,7 +23,7 @@ footer {
   bottom: 0;
   width: 100%;
   background-color: rgb(54, 54, 54);
-  height: 70px;
+  height: 60px;
   color: rgb(118, 118, 118);
   text-shadow: 1px 1px 1px black;
 }
@@ -50,6 +46,10 @@ footer {
 
 #project-container {
   margin-top: -50px;
+}
+
+#profile-container {
+  z-index: 1000;
 }
 
 #description-row {
@@ -148,6 +148,7 @@ hr {
 }
 
 .profile-picture {
+  z-index: 1000;
   margin-top: -95px;
   width: 190px;
   height: 190px;
@@ -158,4 +159,10 @@ hr {
 #addSkillMenu {
   min-width: 200px;
   background-color: rgb(246, 246, 246);
+  border: 1px solid #eeeeee;
+}
+
+.register-form-col {
+  margin-top: -70px;
+  padding: 10px 15px;
 }
