--- a/css/style.css
+++ b/css/style.css
@@ -319,15 +319,47 @@ hr {
 #user-search {
   height: 50px;
   margin-bottom: 10px;
+  padding: 3px;
+}
+
+#user-search-input {
+  border: none;
+  border-radius: 2px;
+  border-width: 0;
+  background-color: rgb(249, 249, 249);
 }
 
 .profile-brief {
+  padding: 5px 10px;
   height: 70px;
   width: 100%;
   background-color: white;
   margin-bottom: 4px;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   border-radius: 0.25rem;
+  display: flex;
+  align-items: center;
+}
+
+.profile-brief div {
+  display: flex;
+  height: 50px;
+  flex-direction: column;
+  margin-right: 10px;
+  justify-content: space-between;
+  padding: 2px 0px;
+  flex-grow: 1;
+}
+
+.profile-brief div p:first-child {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.profile-brief div p:last-child {
+  font-size: 0.75rem;
+  margin: 0;
+  color: gray;
 }
 
 .project-brief {
@@ -339,5 +371,7 @@ hr {
   border-radius: 0.25rem;
 }
 
-#profile-list {
+.profile-brief-picture {
+  width: 50px;
+  height: 50px;
 }
