--- a/src/style/normalize.css
+++ b/src/style/normalize.css
@@ -81,6 +81,12 @@ pre {
 
 a {
   background-color: transparent;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: none;
+  color: inherit;
 }
 
 /**
